# oh_my_grain

./: Cargo.toml  README.md  build_and_copy.sh  bundler.toml
.github/: FUNDING.yml
.github/workflows/: build.yaml  build.yml
src/: delay.rs  editor.rs  lib.rs  main.rs
src/delay/: envelope.rs  filter.rs  playhead.rs
src/editor/: styles.css  waveform.rs
